[#9] break comment words if they are very long to stop horizontal scrolling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,6 +29,7 @@ ul {
 
 .comment {
   padding-bottom: 16px;
+  word-break: break-all;
 
   &__footer {
     line-height: 1.4;
